[gd_scene format=3 uid="uid://4uf1lnelxd5q"]

[ext_resource type="Script" uid="uid://6yrqsfqmnj28" path="res://src/start.gd" id="1_bodal"]
[ext_resource type="Texture2D" uid="uid://6ap6jx5odhtl" path="res://assets/sprites/buttons/redNormal.png" id="3_7pwkw"]
[ext_resource type="Texture2D" uid="uid://cxu46fjh8uwoh" path="res://assets/sprites/buttons/yellowNormal.png" id="3_ss8vn"]
[ext_resource type="Texture2D" uid="uid://boaf02htj684l" path="res://assets/sprites/buttons/redPressed.png" id="4_5bn4p"]
[ext_resource type="Texture2D" uid="uid://colvfa81cay6k" path="res://assets/sprites/buttons/yellowPressed.png" id="4_w5kog"]
[ext_resource type="Texture2D" uid="uid://bpm5iuel7vlnn" path="res://assets/sprites/buttons/redHover.png" id="5_qmsyr"]
[ext_resource type="Texture2D" uid="uid://btngw4n4tuyuo" path="res://assets/sprites/buttons/yellowHover.png" id="5_y71vl"]
[ext_resource type="Texture2D" uid="uid://cdp2dd0n2eh4p" path="res://assets/sprites/buttons/greyNormal.png" id="6_knwj7"]
[ext_resource type="FontFile" uid="uid://d38hqs8frrw70" path="res://assets/fonts/pixelFont.ttf" id="7_gsp51"]
[ext_resource type="Texture2D" uid="uid://dduc516tf05iu" path="res://assets/sprites/buttons/greyPressed.png" id="7_jwunu"]
[ext_resource type="Texture2D" uid="uid://b68imfxynw17o" path="res://assets/sprites/buttons/greyHover.png" id="8_1tr1b"]
[ext_resource type="Texture2D" uid="uid://blr6g4bgng32c" path="res://assets/sprites/buttons/greenNormal.png" id="9_vp7ys"]
[ext_resource type="Texture2D" uid="uid://trbakrd6lyo2" path="res://assets/sprites/buttons/greenPressed.png" id="10_1tb08"]
[ext_resource type="Texture2D" uid="uid://c7n6i06vyeftx" path="res://assets/sprites/buttons/greenHover.png" id="11_08nt8"]
[ext_resource type="Texture2D" uid="uid://d3g5tmmjwo65e" path="res://assets/sprites/buttons/blueNormal.png" id="16_vp7ys"]
[ext_resource type="Texture2D" uid="uid://wudgblco12od" path="res://assets/sprites/buttons/bluePressed.png" id="17_1tb08"]
[ext_resource type="Texture2D" uid="uid://b31h6mq4ljaia" path="res://assets/sprites/buttons/blueHover.png" id="18_08nt8"]
[ext_resource type="Texture2D" uid="uid://bpeehld1bxsla" path="res://assets/sprites/popupWindow.png" id="18_aox1m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u80x2"]
bg_color = Color(0.13496137, 0.6625398, 0.8052275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vp7ys"]
bg_color = Color(1, 0.34066984, 0.29904395, 1)
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp05y"]
bg_color = Color(0, 0, 0, 0.6862745)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g3i1d"]
texture = ExtResource("18_aox1m")

[node name="start" type="Control" unique_id=134240700]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bodal")

[node name="petSelectPanel" type="Panel" parent="." unique_id=51194941]
process_mode = 3
top_level = true
z_index = -1
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
theme_override_styles/panel = SubResource("StyleBoxFlat_u80x2")

[node name="VBoxContainer" type="VBoxContainer" parent="petSelectPanel" unique_id=768017436]
process_mode = 3
layout_mode = 0
offset_left = 195.0
offset_top = 84.0
offset_right = 454.0
offset_bottom = 284.0
mouse_filter = 2
alignment = 1

[node name="titleLabel" type="Label" parent="petSelectPanel/VBoxContainer" unique_id=1894006734]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("7_gsp51")
theme_override_font_sizes/font_size = 26
text = "Create a Pet"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="petSelectPanel/VBoxContainer" unique_id=2024957984]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="catButton" type="TextureButton" parent="petSelectPanel/VBoxContainer/HBoxContainer" unique_id=1012202981]
process_mode = 3
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
texture_normal = ExtResource("3_ss8vn")
texture_pressed = ExtResource("4_w5kog")
texture_hover = ExtResource("5_y71vl")
stretch_mode = 4

[node name="catLabel" type="Label" parent="petSelectPanel/VBoxContainer/HBoxContainer/catButton" unique_id=27448716]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -4.0
offset_right = -5.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_gsp51")
theme_override_font_sizes/font_size = 16
text = "Cat"
horizontal_alignment = 1
vertical_alignment = 1

[node name="dogButton" type="TextureButton" parent="petSelectPanel/VBoxContainer/HBoxContainer" unique_id=380767935]
process_mode = 3
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
texture_normal = ExtResource("3_ss8vn")
texture_pressed = ExtResource("4_w5kog")
texture_hover = ExtResource("5_y71vl")
stretch_mode = 4

[node name="dogLabel" type="Label" parent="petSelectPanel/VBoxContainer/HBoxContainer/dogButton" unique_id=898198864]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -4.0
offset_right = -5.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_gsp51")
theme_override_font_sizes/font_size = 16
text = "Dog"
horizontal_alignment = 1
vertical_alignment = 1

[node name="nameInput" type="LineEdit" parent="petSelectPanel/VBoxContainer" unique_id=1784518070]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("7_gsp51")
placeholder_text = "Name"
max_length = 12

[node name="confirmButton" type="TextureButton" parent="petSelectPanel/VBoxContainer" unique_id=2046718307]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_7pwkw")
texture_pressed = ExtResource("4_5bn4p")
texture_hover = ExtResource("5_qmsyr")
stretch_mode = 5

[node name="confirmLabel" type="Label" parent="petSelectPanel/VBoxContainer/confirmButton" unique_id=1401672692]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_gsp51")
theme_override_font_sizes/font_size = 16
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="backButton" type="TextureButton" parent="petSelectPanel/VBoxContainer" unique_id=1577411614]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("9_vp7ys")
texture_pressed = ExtResource("10_1tb08")
texture_hover = ExtResource("11_08nt8")
stretch_mode = 5

[node name="backLabel" type="Label" parent="petSelectPanel/VBoxContainer/backButton" unique_id=1913894284]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_gsp51")
theme_override_font_sizes/font_size = 16
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="errorLabel" type="Label" parent="petSelectPanel/VBoxContainer" unique_id=1649059632]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("7_gsp51")
theme_override_font_sizes/font_size = 13
horizontal_alignment = 1
vertical_alignment = 1

[node name="startPanel" type="Panel" parent="." unique_id=1333893442]
process_mode = 3
top_level = true
z_index = -1
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u80x2")

[node name="VBoxContainer" type="VBoxContainer" parent="startPanel" unique_id=1403230932]
process_mode = 3
layout_mode = 0
offset_left = 259.0
offset_top = 201.0
offset_right = 319.0
offset_bottom = 239.0
scale = Vector2(2, 2)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
alignment = 1

[node name="startButton" type="TextureButton" parent="startPanel/VBoxContainer" unique_id=1806528494]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_7pwkw")
texture_pressed = ExtResource("4_5bn4p")
texture_hover = ExtResource("5_qmsyr")

[node name="startLabel" type="Label" parent="startPanel/VBoxContainer/startButton" unique_id=1992340391]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -1.5
offset_right = -0.5
offset_bottom = -1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_gsp51")
theme_override_font_sizes/font_size = 9
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="startLabel" type="Label" parent="startPanel/VBoxContainer/startButton/startLabel" unique_id=894652147]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -43.5
offset_right = 61.0
offset_bottom = -34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_gsp51")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_vp7ys")
text = " BudgetBuddy "
horizontal_alignment = 1
vertical_alignment = 1

[node name="settingsButton" type="TextureButton" parent="startPanel/VBoxContainer" unique_id=525681165]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_knwj7")
texture_pressed = ExtResource("7_jwunu")
texture_hover = ExtResource("8_1tr1b")

[node name="settingsLabel" type="Label" parent="startPanel/VBoxContainer/settingsButton" unique_id=801694469]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -1.5
offset_right = -0.5
offset_bottom = -1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_gsp51")
theme_override_font_sizes/font_size = 9
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=718663738]
process_mode = 3
layer = 5

[node name="settingsPanel" type="Panel" parent="CanvasLayer" unique_id=1990612308]
process_mode = 3
z_index = 5
offset_right = 640.0
offset_bottom = 360.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hp05y")

[node name="settingsPopup" type="Panel" parent="CanvasLayer/settingsPanel" unique_id=1625499725]
process_mode = 3
layout_mode = 0
offset_left = -2.0
offset_right = 638.0
offset_bottom = 360.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_g3i1d")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/settingsPanel/settingsPopup" unique_id=1854276479]
process_mode = 3
layout_mode = 0
offset_left = 283.0
offset_top = 172.0
offset_right = 408.0
offset_bottom = 302.0

[node name="deleteButton" type="TextureButton" parent="CanvasLayer/settingsPanel/settingsPopup/VBoxContainer" unique_id=1634676640]
process_mode = 3
z_index = 12
custom_minimum_size = Vector2(125, 35)
layout_mode = 2
texture_normal = ExtResource("3_7pwkw")
texture_pressed = ExtResource("4_5bn4p")
texture_hover = ExtResource("5_qmsyr")
stretch_mode = 4

[node name="deleteLabel" type="Label" parent="CanvasLayer/settingsPanel/settingsPopup/VBoxContainer/deleteButton" unique_id=516611972]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -4.0
offset_right = -10.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -5
theme_override_fonts/font = ExtResource("7_gsp51")
theme_override_font_sizes/font_size = 13
text = "Reset Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="quitButton" type="TextureButton" parent="CanvasLayer/settingsPanel/settingsPopup/VBoxContainer" unique_id=1867325412]
process_mode = 3
z_index = 12
custom_minimum_size = Vector2(125, 35)
layout_mode = 2
texture_normal = ExtResource("3_7pwkw")
texture_pressed = ExtResource("4_5bn4p")
texture_hover = ExtResource("5_qmsyr")
stretch_mode = 4

[node name="quitLabel" type="Label" parent="CanvasLayer/settingsPanel/settingsPopup/VBoxContainer/quitButton" unique_id=320951714]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -4.0
offset_right = -10.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -5
theme_override_fonts/font = ExtResource("7_gsp51")
theme_override_font_sizes/font_size = 13
text = "Quit Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="backButton" type="TextureButton" parent="CanvasLayer/settingsPanel/settingsPopup/VBoxContainer" unique_id=1883215278]
custom_minimum_size = Vector2(125, 35)
layout_mode = 2
texture_normal = ExtResource("16_vp7ys")
texture_pressed = ExtResource("17_1tb08")
texture_hover = ExtResource("18_08nt8")
stretch_mode = 4

[node name="backSettingsLabel" type="Label" parent="CanvasLayer/settingsPanel/settingsPopup/VBoxContainer/backButton" unique_id=876479223]
process_mode = 3
z_index = 12
custom_minimum_size = Vector2(77, 26)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -4.0
offset_right = -10.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_gsp51")
theme_override_font_sizes/font_size = 14
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1
